--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="carousel-caption">
           <p class="fs-3">My first android application to help people in need with it's salient features...</p>
           <h1 class="fw-bolder fst-italic">" SAMARITAN- YOUR NEEDMATE "</h1>
-         <a href="https://archanamawale.github.io/my_po/" target="_blank" class="btn btn-primary fw-bold mt-3">Click here to view the project</a>
+         <a href="https://archanamawale.github.io/my_po/" target="_blank" class="btn btn-info fw-bold mt-3">Click here to view the project</a>
           </div>
       </div>
       <div class="carousel-item">
@@ -175,7 +175,7 @@
         <div class="carousel-caption">
           <p class="fs-3">My first portfolio website using my Front-end dev skills...</p>
           <h1 class="fw-bolder fst-italic">" MY PORTFOLIO  "</h1>
-          <a href="https://archanamawale.github.io/my_po/" target="_blank" class="btn btn-primary fw-bold mt-3">Click here to view the project</a>
+          <a href="https://archanamawale.github.io/my_po/" target="_blank" class="btn btn-info fw-bold mt-3">Click here to view the project</a>
         </div>
       </div>
       <div class="carousel-item">
@@ -183,7 +183,7 @@
         <div class="carousel-caption">
           <p class="fs-3">The announcement portal's help guide to aid the end users...</p>
           <h1 class="fw-bolder fst-italic">" ANNOUNCEMENTS "</h1>
-         <a href="https://archanamawale.github.io/announcements/" target="_blank" class="btn btn-primary fw-bold mt-3">Click here to view the project</a>
+         <a href="https://archanamawale.github.io/announcements/" target="_blank" class="btn btn-info fw-bold mt-3">Click here to view the project</a>
     </div>
       </div>
     </div>
